--- a/templates/home.html
+++ b/templates/home.html
@@ -26,14 +26,13 @@
           "/": "&#x2F;",
           "`": "&grave;",
         };
-        const reg = /[&<>"'/`]/gi;
+        const reg = /[&<>"'/`]/ig;
         return string.replace(reg, (match) => map[match]);
       }
 
       function sanitize() {
         let msg = document.getElementById("msg").value;
         document.getElementById("msg").value = encodeHTML(msg);
-        // console.log('yea');
       }
     </script>
     <ul>
